--- a/assets/package.json
+++ b/assets/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.3",
+    "postcss-import": "^14.0.2",
     "tailwindcss": "^2.2.19"
   }
 }
