--- a/.github/workflows/test_and_deploy_to_gigalixir.yml
+++ b/.github/workflows/test_and_deploy_to_gigalixir.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 16.13.0
 
       - name: Install deps
-        run:
+        run: |
           mix deps.get
           npm install --prefix assets
       - run: mix test
