--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ erl_crash.dump
 crypto_dashboard-*.tar
 
 # Ignore assets that are produced by build tools.
-/priv/static/assets/
+/priv/static/
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
@@ -31,4 +31,3 @@ crypto_dashboard-*.tar
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
-
