Fix node path for global deps

--- a/assets/package.json
+++ b/assets/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
-
     "build_css": "NODE_ENV=production tailwindcss --postcss --minify --input=css/app.css --output=../priv/static/assets/app.css",
-    "build_js": "esbuild js/app.js --outfile=../priv/static/assets/app.js",
+    "build_js": "NODE_PATH=../deps esbuild js/app.js --bundle --outfile=../priv/static/assets/app.js",
     "deploy": "npm run build_css & npm run build_js"
   },
   "devDependencies": {
