Update dashboard with helpers

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ crypto_dashboard-*.tar
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
+
+.DS_Store
