--- a/assets/package.json
+++ b/assets/package.json
@@ -1,17 +1,20 @@
 {
   "scripts": {
-    "build_css": "NODE_ENV=production tailwindcss --postcss --minify --input=css/app.css --output=../priv/static/assets/app.css",
-    "build_js": "NODE_PATH=../deps esbuild js/app.js --bundle --outfile=../priv/static/assets/app.js",
-    "deploy": "npm run build_css & npm run build_js"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.3",
-    "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.2.19"
+    "dev": "vite build --watch --minify false --emptyOutDir false --clearScreen false --mode development --sourcemap true",
+    "build": "vite build"
   },
   "dependencies": {
-    "alpinejs": "^3.5.2",
-    "esbuild": "^0.14.2"
+    "alpinejs": "^3.7.1",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.1",
+    "eslint": "^8.5.0",
+    "postcss": "^8.4.5",
+    "prettier": "2.5.1",
+    "tailwindcss": "^3.0.8",
+    "vite": "^2.7.2"
   }
 }
